--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^3.3.0",
     "react-sublime-video": "^0.2.5",
     "reactflow": "^11.10.2"
   },
@@ -34,14 +34,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "babel": {
-    "presets": [
-      "react-app"
-    ],
-    "plugins": ["@babel/plugin-proposal-optional-chaining"]
-  },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
     "less": "^3.9.0",
