--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/compatible": "^1.0.2",
     "antd": "4.24.5",
     "enquire-js": "^0.2.1",
+    "nuka-carousel": "^5.3.0",
     "rc-banner-anim": "^2.2.2",
     "rc-queue-anim": "^1.6.12",
     "rc-scroll-anim": "^2.5.6",
