--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "landing-create-react-app-example",
-  "version": "0.1.0",
+  "name": "website",
   "private": true,
-  "homepage": "./",
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-highlight": "^0.15.0",
+    "react-router-dom": "^6.21.3",
+    "reactflow": "^11.10.2"
+  },
+  "devDependencies": {
     "@ant-design/compatible": "^1.0.2",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "antd": "4.24.5",
     "enquire-js": "^0.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "less": "^4.2.0",
     "nuka-carousel": "^5.3.0",
     "rc-banner-anim": "^2.2.2",
     "rc-queue-anim": "^1.6.12",
     "rc-scroll-anim": "^2.5.6",
     "rc-texty": "^0.2.0",
     "rc-tween-one": "^2.3.4",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-highlight": "^0.15.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^3.3.0",
-    "react-sublime-video": "^0.2.5",
-    "reactflow": "^11.10.2"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "babel-plugin-import": "^1.11.0",
-    "customize-cra": "^0.2.12",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "react-app-rewired": "^2.1.0"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
