--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.3",
+    "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.10.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
     "@ant-design/compatible": "^1.0.2",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -28,21 +31,21 @@
     "@vitejs/plugin-react": "^4.2.1",
     "antd": "4.24.5",
     "enquire-js": "^0.2.1",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "less": "^4.2.0",
     "nuka-carousel": "^5.3.0",
+    "prettier": "^3.0.3",
     "rc-banner-anim": "^2.2.2",
     "rc-queue-anim": "^1.6.12",
     "rc-scroll-anim": "^2.5.6",
     "rc-texty": "^0.2.0",
     "rc-tween-one": "^2.3.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3"
+    "vite": "^5.0.8"
   }
 }
