--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,39 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "content-type"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "DELETE,PUT,POST,GET,OPTIONS"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/chat/(.*)",
+      "destination": "/api/chat"
+    },
+    {
+      "source": "/engine/(.*)",
+      "destination": "/api/engine"
+    },
+    {
+      "source": "/plugin/transcode/v4",
+      "destination": "/api/plugin-pro"
+    },
+    {
+      "source": "/plugin/(.*)",
+      "destination": "/api/plugin"
+    },
+    { "source": "/(.*)", "destination": "/" }]
 }
