--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "copy-to-clipboard": "^3.3.3",
+    "lodash": "^4.17.21",
+    "openai": "^4.38.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
